--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-name: Checking
+name: Build and Release
 
 on:
   push:
-    branches-ignore: [main, master]
+    branches-ignore: [main]
 
 permissions:
   contents: write # to create release commit (google-github-actions/release-please-action)
