--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v4
+      - uses: googleapis/release-please-action@v4
         id: release
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -33,8 +33,12 @@ jobs:
       - uses: hecrj/setup-rust-action@v2
         with:
           rust-version: stable
-      - name: test
+      - name: Run tests
         run: cargo test
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       # - name: setup env
       #   run: |
       #     echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
